--- a/index.html
+++ b/index.html
@@ -75,28 +75,50 @@
             }
         });
 
-        // Dragging the Santa Hat
+        // Dragging the Santa Hat (Mouse and Touch Support)
         let isDragging = false;
         let startX, startY, initialAngle = 0, initialScale = 1;
+        const startDrag = (x, y) => {
+            isDragging = true;
+            startX = x;
+            startY = y;
+        };
+
+        const onDrag = (x, y) => {
+            if (!isDragging) return;
+            const dx = x - startX;
+            const dy = y - startY;
+            santaHat.style.left = `${santaHat.offsetLeft + dx}px`;
+            santaHat.style.top = `${santaHat.offsetTop + dy}px`;
+            startX = x;
+            startY = y;
+        };
+
         santaHat.addEventListener('mousedown', (e) => {
             if (e.button === 0) {
-                isDragging = true;
-                startX = e.clientX;
-                startY = e.clientY;
+                startDrag(e.clientX, e.clientY);
             }
         });
 
+        santaHat.addEventListener('touchstart', (e) => {
+            const touch = e.touches[0];
+            startDrag(touch.clientX, touch.clientY);
+        });
+
         document.addEventListener('mousemove', (e) => {
-            if (!isDragging) return;
-            const dx = e.clientX - startX;
-            const dy = e.clientY - startY;
-            santaHat.style.left = `${santaHat.offsetLeft + dx}px`;
-            santaHat.style.top = `${santaHat.offsetTop + dy}px`;
-            startX = e.clientX;
-            startY = e.clientY;
+            onDrag(e.clientX, e.clientY);
+        });
+
+        document.addEventListener('touchmove', (e) => {
+            const touch = e.touches[0];
+            onDrag(touch.clientX, touch.clientY);
         });
 
         document.addEventListener('mouseup', () => {
+            isDragging = false;
+        });
+
+        document.addEventListener('touchend', () => {
             isDragging = false;
         });
 
