--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
         button {
             display: block;
             margin: 10px auto;
+            font-size: 1.5em;
+            padding: 15px 20px;
         }
         #controls {
             text-align: center;
             margin: 20px;
+            width: 100%;
         }
     </style>
 </head>
