--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Santa Hat Profile Picture Editor</title>
     <style>
+        body {
+            font-family: 'IBM Plex Sans', sans-serif;
+        }
         #editor {
             position: relative;
             width: 300px;
@@ -104,6 +108,7 @@
         });
 
         santaHat.addEventListener('touchstart', (e) => {
+            e.preventDefault();
             const touch = e.touches[0];
             startDrag(touch.clientX, touch.clientY);
         });
@@ -113,6 +118,7 @@
         });
 
         document.addEventListener('touchmove', (e) => {
+            e.preventDefault();
             const touch = e.touches[0];
             onDrag(touch.clientX, touch.clientY);
         });
