--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Santa Hat Profile Picture Editor</title>
+    <title>Santa Hat Profile Picture Edior</title>
     <style>
         body {
             font-family: 'IBM Plex Sans', sans-serif;
