--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <style>
         body {
             font-family: 'IBM Plex Sans', sans-serif;
+            background-color: #18191D;
+            color: #EDEEF0;
         }
         #editor {
             position: relative;
@@ -29,6 +31,11 @@
         input[type='file'] {
             display: block;
             margin: 20px auto;
+            background-color: #FE6F39;
+            color: #18191D;
+            border: none;
+            padding: 10px;
+            border-radius: 5px;
         }
         #controls {
             text-align: center;
@@ -38,11 +45,48 @@
         .slider {
             width: 80%;
             margin: 10px auto;
+            -webkit-appearance: none;
+            appearance: none;
+            height: 8px;
+            background: #FE6F39;
+            outline: none;
+            opacity: 0.9;
+            border-radius: 5px;
+        }
+        .slider::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 20px;
+            height: 20px;
+            background: #EDEEF0;
+            cursor: pointer;
+            border-radius: 50%;
+        }
+        .slider::-moz-range-thumb {
+            width: 20px;
+            height: 20px;
+            background: #EDEEF0;
+            cursor: pointer;
+            border-radius: 50%;
+        }
+        button {
+            display: block;
+            margin: 10px auto;
+            background-color: #FE6F39;
+            color: #18191D;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1.2em;
+        }
+        button:hover {
+            opacity: 0.8;
         }
     </style>
 </head>
 <body>
-    <h2 style="text-align:center;">Add a Santa Hat to Your Profile Pictur!</h2>
+    <h2 style="text-align:center;">Add a Santa Hat to Your Profile Picture!</h2>
     <input type="file" id="imageUpload" accept="image/*">
     <div id="editor">
         <img id="santaHat" src="santa_hat.png" alt="Santa Hat">
