--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         input[type='file'] {
             display: block;
             margin: 20px auto;
-            background-color: #FE6F39;
-            color: #18191D;
+            background-color: #2E2F33;
+            color: #EDEEF0;
             border: none;
             padding: 10px;
             border-radius: 5px;
@@ -48,7 +48,7 @@
             -webkit-appearance: none;
             appearance: none;
             height: 8px;
-            background: #FE6F39;
+            background: #2E2F33;
             outline: none;
             opacity: 0.9;
             border-radius: 5px;
@@ -70,10 +70,10 @@
             border-radius: 50%;
         }
         button {
-            display: block;
-            margin: 10px auto;
-            background-color: #FE6F39;
-            color: #18191D;
+            display: inline-block;
+            margin: 10px;
+            background-color: #2E2F33;
+            color: #EDEEF0;
             border: none;
             padding: 10px 20px;
             border-radius: 5px;
