--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 100px;
+            width: 50%; /* Start with a width that's half of the editor */
             cursor: move;
             transform-origin: center;
             transform: translate(-50%, -50%) rotate(0deg) scale(1);
