--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Santa Hat Profile Picture Editor</title>
+    <title>Party Hat Profile Picture Editor</title>
     <style>
         body {
             font-family: 'IBM Plex Sans', sans-serif;
@@ -94,7 +94,7 @@
     </style>
 </head>
 <body>
-    <h2 style="text-align:center;">Add a Santa Hat to Your Profile Picture!</h2>
+    <h2 style="text-align:center;">Add a PArty Hat to Your Profile Picture!</h2>
     <input type="file" id="imageUpload" accept="image/*">
     <div id="editor">
         <img id="santaHat" src="santa_hat.png" alt="Santa Hat">
